feat: folha data inline fixed.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 node_modules
 .env
-relatorio-2023-2025.pdf
-relatorio-financeiro-editado.txt
+relatorio.pdf
 relatorio-financeiro.txt
-relatorio-financeiro.xlsx
