--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/app.ts",
+    "dev": "ts-node src/folha-parser.ts",
     "start": "node dist/app.js",
     "build": "tsc"
   },
@@ -30,6 +30,7 @@
     "globals": "^16.5.0",
     "jiti": "^2.6.1",
     "prettier": "3.6.2",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.4"
